2009-09-03  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=28890, make simple user script injection work.
        
        This patch adds new API for adding and removing user scripts from page groups.  User scripts
        are bundled together in isolated worlds (you can have multiple scripts together in the same
        world).

        Added userscripts/ directory for holding new tests (along with a simple test of script injection).

        * platform/mac/userscripts: Added.
        * platform/mac/userscripts/script-run-at-end-expected.txt: Added.
        * userscripts: Added.
        * userscripts/script-run-at-end.html: Added.

2009-09-04  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=26402
        Crashes when using a detached DocumentType node

        * fast/dom/DOMImplementation/detached-doctype-expected.txt: Added.
        * fast/dom/DOMImplementation/detached-doctype.html: Added.

2009-09-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] Fix brainfart in r48050, tests should have paths

        * platform/qt/Skipped:

2009-09-04  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] Skip tests failing due to missing DRT features

        * platform/qt/Skipped:

2009-09-04  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Tests for <input type=color> validation.
        https://bugs.webkit.org/show_bug.cgi?id=28966

        * fast/forms/ValidityState-patternMismatch-unsupported-expected.txt: Added.
        * fast/forms/ValidityState-patternMismatch-unsupported.html: Added.
        * fast/forms/ValidityState-typeMismatch-color-expected.txt: Added.
        * fast/forms/ValidityState-typeMismatch-color.html: Added.