@@ -59,7 +59,6 @@ Pasteboard* Pasteboard::generalPasteboard()
 }
 
 Pasteboard::Pasteboard()
-    : m_selectionMode(false)
 {
 }
 
@@ -67,16 +66,6 @@ void Pasteboard::clear()
 {
     // The ScopedClipboardWriter class takes care of clearing the clipboard's
     // previous contents.
-}
-
-bool Pasteboard::isSelectionMode() const
-{
-    return m_selectionMode;
-}
-
-void Pasteboard::setSelectionMode(bool selectionMode)
-{
-    m_selectionMode = selectionMode;
 }
 
 void Pasteboard::writeSelection(Range* selectedRange, bool canSmartCopyOrDelete, Frame* frame)
@@ -145,23 +134,23 @@ void Pasteboard::writeImage(Node* node, const KURL&, const String& title)
 
 bool Pasteboard::canSmartReplace()
 {
-    return ChromiumBridge::clipboardIsFormatAvailable(PasteboardPrivate::WebSmartPasteFormat, m_selectionMode ? PasteboardPrivate::SelectionBuffer : PasteboardPrivate::StandardBuffer);
+    return ChromiumBridge::clipboardIsFormatAvailable(
+        PasteboardPrivate::WebSmartPasteFormat);
 }
 
 String Pasteboard::plainText(Frame* frame)
 {
-    return ChromiumBridge::clipboardReadPlainText(m_selectionMode ? PasteboardPrivate::SelectionBuffer : PasteboardPrivate::StandardBuffer);
+    return ChromiumBridge::clipboardReadPlainText();
 }
 
 PassRefPtr<DocumentFragment> Pasteboard::documentFragment(Frame* frame, PassRefPtr<Range> context, bool allowPlainText, bool& chosePlainText)
 {
     chosePlainText = false;
-    PasteboardPrivate::ClipboardBuffer buffer = m_selectionMode ? PasteboardPrivate::SelectionBuffer : PasteboardPrivate::StandardBuffer;
 
-    if (ChromiumBridge::clipboardIsFormatAvailable(PasteboardPrivate::HTMLFormat, buffer)) {
+    if (ChromiumBridge::clipboardIsFormatAvailable(PasteboardPrivate::HTMLFormat)) {
         String markup;
         KURL srcURL;
-        ChromiumBridge::clipboardReadHTML(buffer, &markup, &srcURL);
+        ChromiumBridge::clipboardReadHTML(&markup, &srcURL);
 
         RefPtr<DocumentFragment> fragment =
             createFragmentFromMarkup(frame->document(), markup, srcURL);
@@ -170,7 +159,7 @@ PassRefPtr<DocumentFragment> Pasteboard::documentFragment(Frame* frame, PassRefP
     }
 
     if (allowPlainText) {
-        String markup = ChromiumBridge::clipboardReadPlainText(buffer);
+        String markup = ChromiumBridge::clipboardReadPlainText();
         if (!markup.isEmpty()) {
             chosePlainText = true;
 
