@@ -1,3 +1,11 @@
+2009-09-04  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Unreviewed, build fix.
+
+        [Chromium] Rolling out http://trac.webkit.org/changeset/48035, because it broke
+        the build.
+        https://bugs.webkit.org/show_bug.cgi?id=28696
+
 2009-09-03  Dave Hyatt  <hyatt@apple.com>
 
         Reviewed by Adam Roben.
